--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,3 +204,17 @@ a.dropdown-item {
     margin: 0 auto;
     min-height: 200px
 }
+
+/* ------------------------------------- Carousel */
+
+.container-carousel {
+    width: 80vh;
+    height: 80vh;
+}
+
+.carousel-item img {
+    margin: 0 auto;
+    width: 80vh;
+    height: 80vh;
+
+}
