--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,10 +121,11 @@ header {
 /* ------------------------------------- Navitation Bar - small screen */
 
 .btn {
-    padding: 0;
+
 }
 
 .btn-default {
+    padding: 0;
     box-shadow: 0px 0px 0px 0px;
     color: #4D4036;
     font-size: 15px;
@@ -192,6 +193,33 @@ a.dropdown-item {
 }
 
 
+.btn-secondary {
+    display: block;
+    width: 300px;
+    padding: 10px 20px;
+    margin: 15px auto;
+    background-color: #7A9499;
+    color: #2E474D;
+    border: 0px solid #7A9499;
+    align-content: center;
+}
+
+.btn-secondary:hover, .btn-secondary:focus, .btn-secondary.focus {
+    background-color: #2E474D;
+    color: #7A9499;
+    border: 0px solid white;
+    box-shadow: 0 0 0 0;
+}
+
+.btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
+    background-color: #2E474D;
+    color: #7A9499;
+    border: 0px solid white;
+}
+
+.btn-secondary:not(:disabled):not(.disabled).active:focus, .btn-secondary:not(:disabled):not(.disabled):active:focus, .show>.btn-secondary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0;
+}
 
 /* ------------------------------------- Charts */
 
