Amend z-index of dropdown images on Navbar so not to bring to forefront

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@ header {
 
 .menuitem:hover .menuitem-project1{
     display: block;
+    z-index: 1100;
     animation-name: slide-down;
     animation-duration: .5s;
 }
