--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,10 @@ header {
     margin: 0;
 }
 
+.menuitem a {
+    color: #4D4036;
+}
+
 .navbar li .menuitem-project1 {
     display: none;
     position: relative;
