--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,11 +137,7 @@ header {
 
 /* ------------------------------------- Navitation Bar - small screen */
 
-.btn {
-
-}
-
-.btn-default {
+.btn-nav {
     padding: 0;
     box-shadow: 0px 0px 0px 0px;
     color: #4D4036;
@@ -153,7 +149,7 @@ header {
     border-radius: 0;   
 }
 
-.btn-default:focus, .btn-default.focus {
+.btn-nav:focus, .btn-nav.focus {
     box-shadow: 0px 0px 0px 0px;
     font-size: 15px;
     font-weight: bolder;
