--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 
 
@@ -122,12 +122,6 @@ header {
     bottom: 0;
     z-index: 1;
 }
-
-/* .menuitem:hover > .menuitem-project1 {
-    animation-name: menu-hover;
-    animation-duration: .5s;
-    animation-fill-mode: forwards;
-} */
 
 .menuitem a:hover {
     color: #ffffff;
@@ -298,6 +292,80 @@ a.dropdown-item {
 svg > g > g:last-child { pointer-events: none }
 
 /* ------------------------------------- Chart - End */
+
+/* ------------------------------------- Dashboard - Start*/
+
+.dashboard {
+    max-width: 90%;
+}
+
+.dashboard-header h1 {
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+    margin: 0 0 15px 0;
+}
+
+.dashboard-boxes {
+    text-align: center;
+    display: inline-block;
+    list-style-type: none;
+    margin: 10px auto;
+}
+
+.dashboard-boxes-background-top {
+    position: relative;
+    max-width: 75%;
+    height: 45px;
+    padding: 10px 0;
+    background-color:rgba(148, 151, 159, 0.486);
+    border-radius: 5px 5px 0 0;
+    margin: auto;
+}
+
+.dashboard-boxes-background-bottom {
+    position: relative;
+    max-width: 75%;
+    height: 45px;
+    padding: 10px 0;
+    background-color: rgba(148, 151, 159, 0.486);
+    border-radius: 0 0 5px 5px;
+    margin: auto;
+}
+
+.dashboard-boxes-background-top h4 {
+    color: #212633;
+    font-size: 15px;
+    font-weight: 600;
+    position: absolute;
+    margin: 0;
+    padding: 0 0 3px 0;
+    bottom: 0px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 85%;
+    border-bottom: 1px solid #fff;
+}
+
+.dashboard-boxes-background-bottom h5 {
+    color: #212633;
+    font-size: 15px;
+    font-weight: 400;
+    position: absolute;
+    margin: 0;
+    padding: 3px 0 0 0;
+    top: 0px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 100%;
+}
+
+.dashboard-boxes h5 {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+/* ------------------------------------- Dashboard - End*/
 
 /* ------------------------------------- Gallery - Start*/
 
